training page update

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg fixed-top">
-        <a class="navbar-brand" href="#">REFINE Fitness</a>
+        <a class="navbar-brand" href="./index.html">REFINE Fitness</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fa fa-bars" ></span>
         </button>
@@ -179,10 +179,12 @@
                 <div class="col-4 col-sm-2 offset-1 my-4">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-light">Home</a></li>
-                        <li><a href="#" class="text-light">About</a></li>
-                        <li><a href="#" class="text-light">Sites</a></li>
-                        <li><a href="#" class="text-light">Contact</a></li>
+                        <li><a href="./index.html" class="text-light">Home</a></li>
+                        <li><a href="./supplements.html" class="text-light">Supplements</a></li>
+                        <li><a href="./training.html" class="text-light">Supplements</a></li>
+                        <li><a href="#" class="text-light">Trainers</a></li>
+                        <li><a href="./about.html" class="text-light">About</a></li>
+                        <li><a href="#" class="text-light">Sign Up</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5 text-center my-4">
