--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="./images/dumbbellrack.jpeg" alt="Breadcrumb Trail Campground" />
+                            <a href="training.html"><img class="d-block w-100" src="./images/dumbbellrack.jpeg" alt="" /></a>
                             <div class="carousel-caption">
                                 <h3>Find the Best Workouts</h3>
                                 <p class="d-none d-sm-block">Great workouts to kick off your fitness goals!</p>
@@ -111,8 +111,8 @@
                         <div class="carousel-item">
                             <img class="d-block w-100" src="./images/weightlifting1.jpeg" alt="Chrome River Campground" />
                             <div class="carousel-caption">
-                                <h3>Breadcrumb Trail Campground</h3>
-                                <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy of old-growth firs at this enchanting spot by the Chrome River.</p>
+                                <h3>Join the Movement</h3>
+                                <p class="d-none d-sm-block">Join us for special offeres and tips to help you achieve your fitness goals!</p>
                             </div>
                         </div>
                     </div>
@@ -138,10 +138,12 @@
                 <div class="col-4 col-sm-2 offset-1 my-4">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-light">Home</a></li>
-                        <li><a href="#" class="text-light">About</a></li>
-                        <li><a href="#" class="text-light">Sites</a></li>
-                        <li><a href="#" class="text-light">Contact</a></li>
+                        <li><a href="./index.html" class="text-light">Home</a></li>
+                        <li><a href="./supplements.html" class="text-light">Supplements</a></li>
+                        <li><a href="./training.html" class="text-light">Supplements</a></li>
+                        <li><a href="#" class="text-light">Trainers</a></li>
+                        <li><a href="./about.html" class="text-light">About</a></li>
+                        <li><a href="#" class="text-light">Sign Up</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5 text-center my-4">
